--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://kharv.github.io
-title: My Octopress Blog
+title: Kharv's blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Kharv
 simple_search: https://www.google.com/search
-description:
+description: A place where everything is decentralized. My love, my passion, my dedication for the cryto space  
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
